force-app/main/default/objects/Opportunity/fields/DLI_Confirmed_Distributor__c.field-meta.xml
<CustomField>
    <fullName>DLI_Confirmed_Distributor__c</fullName>
    <label>DLI Confirmed Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingram Micro</fullName>
            </value>
            <value>
                <fullName>Synnex</fullName>
            </value>
            <value>
                <fullName>Carahsoft</fullName>
            </value>
            <value>
                <fullName>PNY</fullName>
            </value>
            <value>
                <fullName>Ingram Europe</fullName>
            </value>
            <value>
                <fullName>Ingram Micro Shanghai</fullName>
            </value>
            <value>
                <fullName>Macnica</fullName>
            </value>
            <value>
                <fullName>Ryoyo</fullName>
            </value>
            <value>
                <fullName>Rashi</fullName>
            </value>
            <value>
                <fullName>Zerone</fullName>
            </value>
            <value>
                <fullName>C-data</fullName>
            </value>
            <value>
                <fullName>BayNex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>