force-app/main/default/objects/Opportunity/fields/DLI_Confirmed_Reseller__c.field-meta.xml
<CustomField>
    <fullName>DLI_Confirmed_Reseller__c</fullName>
    <label>DLI Confirmed Reseller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advania</fullName>
            </value>
            <value>
                <fullName>AI Lab</fullName>
            </value>
            <value>
                <fullName>Alexandra Institute</fullName>
            </value>
            <value>
                <fullName>Altair (Fluidyna)</fullName>
            </value>
            <value>
                <fullName>AMAX</fullName>
            </value>
            <value>
                <fullName>APY</fullName>
            </value>
            <value>
                <fullName>BIT</fullName>
            </value>
            <value>
                <fullName>Booz Allen</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>CGit AB</fullName>
            </value>
            <value>
                <fullName>Computacenter</fullName>
            </value>
            <value>
                <fullName>Compugen</fullName>
            </value>
            <value>
                <fullName>Conoa</fullName>
            </value>
            <value>
                <fullName>CTC Technology</fullName>
            </value>
            <value>
                <fullName>Dalco</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>DellEMC (incl Dell Fed)</fullName>
            </value>
            <value>
                <fullName>DH Tech</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>ePlus</fullName>
            </value>
            <value>
                <fullName>GPLTech</fullName>
            </value>
            <value>
                <fullName>Groupware</fullName>
            </value>
            <value>
                <fullName>Gulf Business Machines</fullName>
            </value>
            <value>
                <fullName>Hancom</fullName>
            </value>
            <value>
                <fullName>Hitachi Information Academy</fullName>
            </value>
            <value>
                <fullName>III Education</fullName>
            </value>
            <value>
                <fullName>Insight</fullName>
            </value>
            <value>
                <fullName>Inspur</fullName>
            </value>
            <value>
                <fullName>iTrain</fullName>
            </value>
            <value>
                <fullName>ITRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>