force-app/main/default/objects/Opportunity/fields/DLI_Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>DLI_Customer_Comments__c</fullName>
    <label>DLI Customer Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>