force-app/main/default/objects/Opportunity/fields/DLI_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>DLI_Delivery_Date__c</fullName>
    <label>DLI Delivery Date</label>
    <type>Date</type>
</CustomField>