force-app/main/default/objects/Opportunity/fields/DLI_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>DLI_Payment_Method__c</fullName>
    <label>DLI Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Manual Invoice</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>Barter</fullName>
            </value>
            <value>
                <fullName>RSMP</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Credit Card - Online Store</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>