force-app/main/default/objects/Opportunity/fields/DLI_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>DLI_Payment_Status__c</fullName>
    <label>DLI Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undefined</fullName>
                <default>true</default>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>Pre-Approved</fullName>
            </value>
            <value>
                <fullName>Order Accepted</fullName>
            </value>
            <value>
                <fullName>Payment Collected</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>