force-app/main/default/objects/Opportunity/fields/DLI_Proposed_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>DLI_Proposed_Training_Date__c</fullName>
    <label>DLI Proposed Training Date</label>
    <type>Date</type>
</CustomField>