force-app/main/default/objects/Opportunity/fields/DLI_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>DLI_Submitter_Email__c</fullName>
    <label>DLI Submitter Email</label>
    <type>Email</type>
</CustomField>