force-app/main/default/objects/Opportunity/fields/DLI_Submitter_First_Name__c.field-meta.xml
<CustomField>
    <fullName>DLI_Submitter_First_Name__c</fullName>
    <label>DLI Submitter First Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>