force-app/main/default/objects/Opportunity/fields/DLI_Submitter_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>DLI_Submitter_Organization_Name__c</fullName>
    <label>DLI Submitter Organization Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>