force-app/main/default/objects/Opportunity/fields/DLI_Submitter_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>DLI_Submitter_Phone_Number__c</fullName>
    <label>DLI Submitter Phone Number</label>
    <type>Phone</type>
</CustomField>