force-app/main/default/objects/Opportunity/fields/Do_not_create_win_form__c.field-meta.xml
<CustomField>
    <fullName>Do_not_create_win_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not create win form</label>
    <type>Checkbox</type>
</CustomField>