force-app/main/default/objects/Opportunity/fields/Do_you_have_a_NPN_Solution_Provider_VAR__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_NPN_Solution_Provider_VAR__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if you are working with an NPN Solution Provider/VAR. Otherwise, select &quot;No&quot;.  If &quot;Yes&quot;, then you must select the specific NPN Solution Provider/VAR for this opportunity in the field to the right.</inlineHelpText>
    <label>Do you have a NPN Solution Provider/VAR?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>