force-app/main/default/objects/Opportunity/fields/Do_you_have_an_NPN_OEM__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_an_NPN_OEM__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if you are working with an NPN OEM. Otherwise, select &quot;No&quot;.  If &quot;Yes&quot;, then you must select the specific OEM for this opportunity in the NPN OEM field to the right</inlineHelpText>
    <label>Do you have an NPN OEM?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>