force-app/main/default/objects/Opportunity/fields/Downstream_Partner_1__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Partner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downstream Partner 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Downstream Partner 2)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>