force-app/main/default/objects/Opportunity/fields/DR_180Days_Extn_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_180Days_Extn_Rejected_Date__c</fullName>
    <label>180Days Extn Rejected Date</label>
    <type>DateTime</type>
</CustomField>