force-app/main/default/objects/Opportunity/fields/DR_Additional_Recipient_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>DR_Additional_Recipient_Owner_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional Recipient to get the Owner Change Notification (TAM interim change).</description>
    <inlineHelpText>Additional Recipient to get the Owner Change Notification</inlineHelpText>
    <label>Additional Recipient (Owner Change)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>