force-app/main/default/objects/Opportunity/fields/DR_Additional_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>DR_Additional_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DR2 : Deal Registration</description>
    <label>Additional Team Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Additional Team Member)</relationshipLabel>
    <relationshipName>OpportunitiesDRATM</relationshipName>
    <type>Lookup</type>
</CustomField>