force-app/main/default/objects/Opportunity/fields/DR_Approved_Date_PBM__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date_PBM__c</fullName>
    <label>Approved Date (PBM)</label>
    <type>DateTime</type>
</CustomField>