force-app/main/default/objects/Opportunity/fields/DR_Approved_Date_SalesOps__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date_SalesOps__c</fullName>
    <label>Approved Date (SalesOps)</label>
    <type>DateTime</type>
</CustomField>