force-app/main/default/objects/Opportunity/fields/DR_CreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>DR_CreatedByMe__c</fullName>
    <description>This field is used for Opportunity Registration related Report (Owner Opportunities by Stage) and List View (My Opportunities). No need to use it in the Page Layouts</description>
    <formula>if( CreatedById = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for Opportunity Registration related Report (Owner Opportunities by Stage) and List View (My Opportunities).</inlineHelpText>
    <label>CreatedByMe</label>
    <type>Checkbox</type>
</CustomField>