force-app/main/default/objects/Opportunity/fields/DR_Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>DR_Days_to_Expire__c</fullName>
    <description>Opp Reg: Days to expire from today</description>
    <formula>DR_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opp Reg: Days to expire from today</inlineHelpText>
    <label>Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>