force-app/main/default/objects/Opportunity/fields/DR_Deal_Terminated_By__c.field-meta.xml
<CustomField>
    <fullName>DR_Deal_Terminated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Terminated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealTerminatedBy</relationshipName>
    <type>Lookup</type>
</CustomField>