force-app/main/default/objects/Opportunity/fields/DR_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Expiration_Date__c</fullName>
    <description>Calculated field. If Admin Expiration Override, then DR_Expiration_Date_Admin_Override else Expiration Date is based on either Approved Date + Extn Duration (if Extn approved) or Approved Date + 90</description>
    <formula>If ( !ISNULL(DR_Expiration_Date_Admin_Override__c), DR_Expiration_Date_Admin_Override__c, 
If ( (!ISNULL(DR_Extension_Approved_Date__c) &amp;&amp; DR_Is_Extension_Approved__c &amp;&amp; !ISBLANK(TEXT(DR_Extn_Duration__c))), DATEVALUE(DR_Approved_Date__c) + 90 + VALUE(TEXT(DR_Extn_Duration__c)), 
If ( (!ISNULL(DR_Extension_Approved_Date__c) &amp;&amp; DR_Is_Extension_Approved__c &amp;&amp; ISBLANK(TEXT(DR_Extn_Duration__c))), DATEVALUE(DR_Approved_Date__c) + 180,
If ( (!ISNULL(DR_Approved_Date__c) &amp;&amp; DR_Is_Approved__c), DATEVALUE(DR_Approved_Date__c) + 90, null) 
) 
)
)</formula>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>