force-app/main/default/objects/Opportunity/fields/DR_Expiration_Date_Admin_Override__c.field-meta.xml
<CustomField>
    <fullName>DR_Expiration_Date_Admin_Override__c</fullName>
    <description>Used for admins to override deal Expiration Date</description>
    <label>Expiration Date (Admin Override)</label>
    <type>Date</type>
</CustomField>