force-app/main/default/objects/Opportunity/fields/DR_Extension_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>DR_Extension_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that approved Opp Reg extension</description>
    <inlineHelpText>User that approved Opp Reg extension</inlineHelpText>
    <label>Extension Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>