force-app/main/default/objects/Opportunity/fields/DR_Extension_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Extension_Approved_Date__c</fullName>
    <label>Extension Approved Date</label>
    <type>DateTime</type>
</CustomField>