force-app/main/default/objects/Opportunity/fields/DR_Extension_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Extension_Rejected_Date__c</fullName>
    <label>Extension Rejected Date</label>
    <type>DateTime</type>
</CustomField>