force-app/main/default/objects/Opportunity/fields/DR_Extn_Duration__c.field-meta.xml
<CustomField>
    <fullName>DR_Extn_Duration__c</fullName>
    <description>Extension duration in days</description>
    <inlineHelpText>Extension duration in days</inlineHelpText>
    <label>Days to Extend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
            <value>
                <fullName>60</fullName>
                <isActive>false</isActive>
                <label>60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>