force-app/main/default/objects/Opportunity/fields/DR_Installation_Location__c.field-meta.xml
<CustomField>
    <fullName>DR_Installation_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a required field.  Enter the country the customer plans to install the product (e.g. United States).  Begin typing the country name and click the search icon to invoke the lookup window.</inlineHelpText>
    <label>Installation Location</label>
    <referenceTo>Country_List__c</referenceTo>
    <relationshipLabel>Opportunities (Installation Location)</relationshipLabel>
    <relationshipName>InstallationLocationCL</relationshipName>
    <type>Lookup</type>
</CustomField>