force-app/main/default/objects/Opportunity/fields/DR_Is_180Days_Extn_Rejected__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_180Days_Extn_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 180Days Extn Rejected</label>
    <type>Checkbox</type>
</CustomField>