force-app/main/default/objects/Opportunity/fields/DR_Is_Customer_Doing_POC__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Customer_Doing_POC__c</fullName>
    <description>DR2 : Deal Registration</description>
    <label>Is Customer Doing POC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>