force-app/main/default/objects/Opportunity/fields/DR_Is_Deal_Approved_by_SalesOps__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Deal_Approved_by_SalesOps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal Approved by SalesOps</label>
    <type>Checkbox</type>
</CustomField>