force-app/main/default/objects/Opportunity/fields/DR_Is_Deal_Auto_Terminated__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Deal_Auto_Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal Auto Terminated</label>
    <type>Checkbox</type>
</CustomField>