force-app/main/default/objects/Opportunity/fields/DR_Is_Deal_Rejected_by_PBM__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Deal_Rejected_by_PBM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal Rejected by PBM</label>
    <type>Checkbox</type>
</CustomField>