force-app/main/default/objects/Opportunity/fields/DR_Is_Extension_Approved__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Extension_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Extension Approved</label>
    <type>Checkbox</type>
</CustomField>