force-app/main/default/objects/Opportunity/fields/DR_Is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Denied</label>
    <type>Checkbox</type>
</CustomField>