force-app/main/default/objects/Opportunity/fields/DR_Is_Submitted_For_180Days_Extn__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Submitted_For_180Days_Extn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted For 180Days Extn</label>
    <type>Checkbox</type>
</CustomField>