force-app/main/default/objects/Opportunity/fields/DR_Is_Submitted_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Submitted_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted For Approval</label>
    <type>Checkbox</type>
</CustomField>