force-app/main/default/objects/Opportunity/fields/DR_Is_Submitted_For_Extension__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Submitted_For_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted For Extension</label>
    <type>Checkbox</type>
</CustomField>