force-app/main/default/objects/Opportunity/fields/DR_LastStatusModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DR_LastStatusModifiedDate__c</fullName>
    <description>Last Modified Date of Stage or Status: Next Step field</description>
    <inlineHelpText>Last Modified Date of Stage or Status: Next Step field</inlineHelpText>
    <label>LastStatusModifiedDate</label>
    <type>Date</type>
</CustomField>