force-app/main/default/objects/Opportunity/fields/DR_LastStatusModifiedDateWithinRangeN__c.field-meta.xml
<CustomField>
    <fullName>DR_LastStatusModifiedDateWithinRangeN__c</fullName>
    <description>Is LastStatusModifiedDate within 10 days</description>
    <formula>TODAY() -  DR_LastStatusModifiedDate__c &lt;= 10</formula>
    <inlineHelpText>Is LastStatusModifiedDate within 10 days</inlineHelpText>
    <label>LastStatusModifiedDateWithinRangeN</label>
    <type>Checkbox</type>
</CustomField>