force-app/main/default/objects/Opportunity/fields/DR_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Lead_Type__c</fullName>
    <description>DR2 : Deal Registration - read only field to capture the value from Lead.DR_Lead_Type__c used for automation</description>
    <label>Lead Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>