force-app/main/default/objects/Opportunity/fields/DR_Opportunity_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Opportunity_Qualified_Date__c</fullName>
    <inlineHelpText>Completion Date for the Following:  Opportunity has been defined; Initial assessment complete; Technology alignment (is NVIDIA technology the right fit?)</inlineHelpText>
    <label>Opportunity Qualified</label>
    <type>Date</type>
</CustomField>