force-app/main/default/objects/Opportunity/fields/DR_OppReg2_5Open__c.field-meta.xml
<CustomField>
    <fullName>DR_OppReg2_5Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp flag to recreate the Flow queue for existing open deals.
Can be removed later</description>
    <inlineHelpText>Temp flag to recreate the Flow queue for existing open deals.
Can be removed later</inlineHelpText>
    <label>OppReg2.5Open</label>
    <type>Checkbox</type>
</CustomField>