force-app/main/default/objects/Opportunity/fields/DR_Partner_Owner__c.field-meta.xml
<CustomField>
    <fullName>DR_Partner_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In case the Partner Opp creator leaves, this user will be used to submit extensions, get expiration notices</description>
    <label>Partner Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>