force-app/main/default/objects/Opportunity/fields/DR_Partner_Sales_Rep_Company__c.field-meta.xml
<CustomField>
    <fullName>DR_Partner_Sales_Rep_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DR2 : Deal Registration - copies value from lead convert</description>
    <label>Partner Sales Rep Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner Sales Rep Company)</relationshipLabel>
    <relationshipName>OpportunitiesDRPSRC</relationshipName>
    <type>Lookup</type>
</CustomField>