force-app/main/default/objects/Opportunity/fields/DR_Partner_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>DR_Partner_Sales_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DR2 : Deal Registration</description>
    <label>Partner Sales Rep Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Sales Rep Name)</relationshipLabel>
    <relationshipName>OpportunitiesDRPSRN</relationshipName>
    <type>Lookup</type>
</CustomField>