force-app/main/default/objects/Opportunity/fields/DR_PBM_User__c.field-meta.xml
<CustomField>
    <fullName>DR_PBM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PBM for the opportunity. Derived from Opp &gt; NPN SP/VAR Account Owner or set from Partner Contact &gt; Account Owner</description>
    <label>Opportunity PBM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>