force-app/main/default/objects/Opportunity/fields/DR_PBM_User_Manager__c.field-meta.xml
<CustomField>
    <fullName>DR_PBM_User_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PBM&apos;s Manager</description>
    <label>PBM User&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>